Fix: docs spacing & styles

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -183,16 +183,34 @@ h1, h2, h3, h4, h5, h6, p {
   }
 
   h4 {
+    margin-top: 2rem;
     font-size: var(--font-size-400);
   }
 
-  div[style*="font-size:0.8125rem"] {
+  &[class*="_components"] {
+    h2 {
+      padding: 0;
+      margin: 3rem 0 1rem;
+      border: none;
+    }
+  }
+
+  div[style*="font-size:0.8125rem"],
+  div[style*="font-size: 0.8125rem"] {
+    hr {
+      display: none;
+    }
+
     p {
       line-height: 24px;
     }
 
     h3 {
-      margin-bottom: 1.5rem;
+      margin: 1.5rem 0 .5rem;
+
+      & + p {
+        margin-top: 0;
+      }
     }
   }
 }
